# yellin

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: validation.ipynb
notebooks/cache/: fig2_cbar_dense.pkl
scripts/: generate_c_bar_max_binned_table.py  generate_c_bar_max_quick.py  generate_c_bar_max_table.py  generate_c_infinity_table.py
src/yellin/: __init__.py  binned.py  c_bar_max.py  c_bar_max_binned.py  c_infinity.py  intervals.py  spectrum.py  transform.py  upper_limit.py
src/yellin/data/: c_bar_max_binned_table.pkl  c_bar_max_table.pkl  c_infinity_table.npz
tests/: test_yellin.py
