[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yellin"
version = "0.1.0"
description = "High-statistics optimum interval method for upper limits"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/yellin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
